# vla-reward

./: .gitignore  README.md  index.html  pyproject.toml  style.css
charts/: baseline-bars.js  data.js  ensemble-multiples.js  heatmap.js  landscape.js  timing.js  video-reward.js
scripts/: plot_results.py  run.py  run_batch.py  run_ensemble_timing_breakdown.py  run_ensemble_timing_breakdown_fold_towel.py  run_n_sweep.py  run_prompt_sweep.py  run_timing_breakdown_8b.py  run_timing_n10.py
src/: backend.py  prompts.py  topreward.py  video.py  vision_cache.py  voc.py
